carbidev/com.nokia.tools.vct.confml.expressions_1.0.0.v20090225_01-11/src/com/nokia/tools/vct/confml/expressions/confml/grammar/ConfmlParser.java
/*
 * Copyright (c) 2009 Nokia Corporation and/or its subsidiary(-ies). 
 * All rights reserved.
 * This component and the accompanying materials are made available
 * under the terms of "Eclipse Public License v1.0"
 * which accompanies this distribution, and is available
 * at the URL "http://www.eclipse.org/legal/epl-v10.html".
 * 
 * Initial Contributors:
 * Nokia Corporation - Initial contribution
 * 
 * Contributors:
 * 
 * Description: This file is part of com.nokia.tools.vct.confml.expressions component.
 */
// $ANTLR 3.0.1 C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g 2009-02-20 16:55:03
 
  package com.nokia.tools.vct.confml.expressions.confml.grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class ConfmlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CURRENT_REF", "SIBLING_REF", "TOP_LEVEL_SETTING_REF", "SUB_SETTING_REF", "FILE_PATH_REF", "BOOLEAN", "OR", "AND", "EQ", "NEQ", "LT", "GT", "LE", "GE", "PLUS", "MINUS", "MUL", "DIV", "MOD", "Literal", "Number", "Ref", "NEWLINE", "WS", "'('", "')'", "'.'", "'/'", "'['", "']'"
    };
    public static final int Ref=25;
    public static final int MINUS=19;
    public static final int WS=27;
    public static final int EQ=12;
    public static final int LT=14;
    public static final int GT=15;
    public static final int Literal=23;
    public static final int MOD=22;
    public static final int SUB_SETTING_REF=7;
    public static final int OR=10;
    public static final int FILE_PATH_REF=8;
    public static final int NEWLINE=26;
    public static final int GE=17;
    public static final int MUL=20;
    public static final int AND=11;
    public static final int BOOLEAN=9;
    public static final int TOP_LEVEL_SETTING_REF=6;
    public static final int EOF=-1;
    public static final int LE=16;
    public static final int DIV=21;
    public static final int CURRENT_REF=4;
    public static final int SIBLING_REF=5;
    public static final int PLUS=18;
    public static final int Number=24;
    public static final int NEQ=13;

        public ConfmlParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g"; }


      public boolean isFailed() {
        return lastErrorIndex != -1;
      }


    public static class expr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start expr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:51:1: expr : orExpr EOF ;
    public final expr_return expr() throws RecognitionException {
        expr_return retval = new expr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EOF2=null;
        orExpr_return orExpr1 = null;


        CommonTree EOF2_tree=null;

        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:51:5: ( orExpr EOF )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:52:3: orExpr EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_orExpr_in_expr98);
            orExpr1=orExpr();
            _fsp--;

            adaptor.addChild(root_0, orExpr1.getTree());
            EOF2=(Token)input.LT(1);
            match(input,EOF,FOLLOW_EOF_in_expr100); 

            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end expr

    public static class orExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start orExpr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:56:1: orExpr : e= andExpr ( OR e2= andExpr )* ;
    public final orExpr_return orExpr() throws RecognitionException {
        orExpr_return retval = new orExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token OR3=null;
        andExpr_return e = null;

        andExpr_return e2 = null;


        CommonTree OR3_tree=null;

        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:56:7: (e= andExpr ( OR e2= andExpr )* )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:57:3: e= andExpr ( OR e2= andExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_andExpr_in_orExpr116);
            e=andExpr();
            _fsp--;

            adaptor.addChild(root_0, e.getTree());
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:58:3: ( OR e2= andExpr )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==OR) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:59:5: OR e2= andExpr
            	    {
            	    OR3=(Token)input.LT(1);
            	    match(input,OR,FOLLOW_OR_in_orExpr126); 
            	    OR3_tree = (CommonTree)adaptor.create(OR3);
            	    root_0 = (CommonTree)adaptor.becomeRoot(OR3_tree, root_0);

            	    pushFollow(FOLLOW_andExpr_in_orExpr134);
            	    e2=andExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end orExpr

    public static class andExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start andExpr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:63:1: andExpr : e= equalityExpr ( AND e2= equalityExpr )* ;
    public final andExpr_return andExpr() throws RecognitionException {
        andExpr_return retval = new andExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token AND4=null;
        equalityExpr_return e = null;

        equalityExpr_return e2 = null;


        CommonTree AND4_tree=null;

        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:63:8: (e= equalityExpr ( AND e2= equalityExpr )* )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:64:3: e= equalityExpr ( AND e2= equalityExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_equalityExpr_in_andExpr153);
            e=equalityExpr();
            _fsp--;

            adaptor.addChild(root_0, e.getTree());
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:65:3: ( AND e2= equalityExpr )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==AND) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:66:5: AND e2= equalityExpr
            	    {
            	    AND4=(Token)input.LT(1);
            	    match(input,AND,FOLLOW_AND_in_andExpr168); 
            	    AND4_tree = (CommonTree)adaptor.create(AND4);
            	    root_0 = (CommonTree)adaptor.becomeRoot(AND4_tree, root_0);

            	    pushFollow(FOLLOW_equalityExpr_in_andExpr175);
            	    e2=equalityExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end andExpr

    public static class equalityExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start equalityExpr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:70:1: equalityExpr : e= relationalExpr ( EQ e2= relationalExpr | NEQ e2= relationalExpr )* ;
    public final equalityExpr_return equalityExpr() throws RecognitionException {
        equalityExpr_return retval = new equalityExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EQ5=null;
        Token NEQ6=null;
        relationalExpr_return e = null;

        relationalExpr_return e2 = null;


        CommonTree EQ5_tree=null;
        CommonTree NEQ6_tree=null;

        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:70:13: (e= relationalExpr ( EQ e2= relationalExpr | NEQ e2= relationalExpr )* )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:71:3: e= relationalExpr ( EQ e2= relationalExpr | NEQ e2= relationalExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_relationalExpr_in_equalityExpr202);
            e=relationalExpr();
            _fsp--;

            adaptor.addChild(root_0, e.getTree());
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:72:3: ( EQ e2= relationalExpr | NEQ e2= relationalExpr )*
            loop3:
            do {
                int alt3=3;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==EQ) ) {
                    alt3=1;
                }
                else if ( (LA3_0==NEQ) ) {
                    alt3=2;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:73:5: EQ e2= relationalExpr
            	    {
            	    EQ5=(Token)input.LT(1);
            	    match(input,EQ,FOLLOW_EQ_in_equalityExpr212); 
            	    EQ5_tree = (CommonTree)adaptor.create(EQ5);
            	    root_0 = (CommonTree)adaptor.becomeRoot(EQ5_tree, root_0);

            	    pushFollow(FOLLOW_relationalExpr_in_equalityExpr221);
            	    e2=relationalExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:74:5: NEQ e2= relationalExpr
            	    {
            	    NEQ6=(Token)input.LT(1);
            	    match(input,NEQ,FOLLOW_NEQ_in_equalityExpr227); 
            	    NEQ6_tree = (CommonTree)adaptor.create(NEQ6);
            	    root_0 = (CommonTree)adaptor.becomeRoot(NEQ6_tree, root_0);

            	    pushFollow(FOLLOW_relationalExpr_in_equalityExpr235);
            	    e2=relationalExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end equalityExpr

    public static class relationalExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start relationalExpr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:78:1: relationalExpr : e= additiveExpr ( LT e2= additiveExpr | GT e2= additiveExpr | LE e2= additiveExpr | GE e2= additiveExpr )* ;
    public final relationalExpr_return relationalExpr() throws RecognitionException {
        relationalExpr_return retval = new relationalExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token LT7=null;
        Token GT8=null;
        Token LE9=null;
        Token GE10=null;
        additiveExpr_return e = null;

        additiveExpr_return e2 = null;


        CommonTree LT7_tree=null;
        CommonTree GT8_tree=null;
        CommonTree LE9_tree=null;
        CommonTree GE10_tree=null;

        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:78:15: (e= additiveExpr ( LT e2= additiveExpr | GT e2= additiveExpr | LE e2= additiveExpr | GE e2= additiveExpr )* )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:79:3: e= additiveExpr ( LT e2= additiveExpr | GT e2= additiveExpr | LE e2= additiveExpr | GE e2= additiveExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_additiveExpr_in_relationalExpr254);
            e=additiveExpr();
            _fsp--;

            adaptor.addChild(root_0, e.getTree());
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:80:3: ( LT e2= additiveExpr | GT e2= additiveExpr | LE e2= additiveExpr | GE e2= additiveExpr )*
            loop4:
            do {
                int alt4=5;
                switch ( input.LA(1) ) {
                case LT:
                    {
                    alt4=1;
                    }
                    break;
                case GT:
                    {
                    alt4=2;
                    }
                    break;
                case LE:
                    {
                    alt4=3;
                    }
                    break;
                case GE:
                    {
                    alt4=4;
                    }
                    break;

                }

                switch (alt4) {
            	case 1 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:81:5: LT e2= additiveExpr
            	    {
            	    LT7=(Token)input.LT(1);
            	    match(input,LT,FOLLOW_LT_in_relationalExpr276); 
            	    LT7_tree = (CommonTree)adaptor.create(LT7);
            	    root_0 = (CommonTree)adaptor.becomeRoot(LT7_tree, root_0);

            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr285);
            	    e2=additiveExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:82:5: GT e2= additiveExpr
            	    {
            	    GT8=(Token)input.LT(1);
            	    match(input,GT,FOLLOW_GT_in_relationalExpr293); 
            	    GT8_tree = (CommonTree)adaptor.create(GT8);
            	    root_0 = (CommonTree)adaptor.becomeRoot(GT8_tree, root_0);

            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr302);
            	    e2=additiveExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:83:5: LE e2= additiveExpr
            	    {
            	    LE9=(Token)input.LT(1);
            	    match(input,LE,FOLLOW_LE_in_relationalExpr353); 
            	    LE9_tree = (CommonTree)adaptor.create(LE9);
            	    root_0 = (CommonTree)adaptor.becomeRoot(LE9_tree, root_0);

            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr361);
            	    e2=additiveExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;
            	case 4 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:84:5: GE e2= additiveExpr
            	    {
            	    GE10=(Token)input.LT(1);
            	    match(input,GE,FOLLOW_GE_in_relationalExpr369); 
            	    GE10_tree = (CommonTree)adaptor.create(GE10);
            	    root_0 = (CommonTree)adaptor.becomeRoot(GE10_tree, root_0);

            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr377);
            	    e2=additiveExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e2.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end relationalExpr

    public static class additiveExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start additiveExpr
    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:89:1: additiveExpr : multiplicativeExpr ( PLUS e= multiplicativeExpr | MINUS e= multiplicativeExpr )* ;
    public final additiveExpr_return additiveExpr() throws RecognitionException {
        additiveExpr_return retval = new additiveExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PLUS12=null;
        Token MINUS13=null;
        multiplicativeExpr_return e = null;

        multiplicativeExpr_return multiplicativeExpr11 = null;


        CommonTree PLUS12_tree=null;
        CommonTree MINUS13_tree=null;

        try {
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:89:13: ( multiplicativeExpr ( PLUS e= multiplicativeExpr | MINUS e= multiplicativeExpr )* )
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:90:2: multiplicativeExpr ( PLUS e= multiplicativeExpr | MINUS e= multiplicativeExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_multiplicativeExpr_in_additiveExpr397);
            multiplicativeExpr11=multiplicativeExpr();
            _fsp--;

            adaptor.addChild(root_0, multiplicativeExpr11.getTree());
            // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:91:2: ( PLUS e= multiplicativeExpr | MINUS e= multiplicativeExpr )*
            loop5:
            do {
                int alt5=3;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==PLUS) ) {
                    alt5=1;
                }
                else if ( (LA5_0==MINUS) ) {
                    alt5=2;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:92:4: PLUS e= multiplicativeExpr
            	    {
            	    PLUS12=(Token)input.LT(1);
            	    match(input,PLUS,FOLLOW_PLUS_in_additiveExpr405); 
            	    PLUS12_tree = (CommonTree)adaptor.create(PLUS12);
            	    root_0 = (CommonTree)adaptor.becomeRoot(PLUS12_tree, root_0);

            	    pushFollow(FOLLOW_multiplicativeExpr_in_additiveExpr414);
            	    e=multiplicativeExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\eclipse\\workspace_vct\\com.nokia.tools.vct.confml.expressions\\src\\com\\nokia\\tools\\vct\\confml\\expressions\\confml\\grammar\\Confml.g:93:7: MINUS e= multiplicativeExpr
            	    {
            	    MINUS13=(Token)input.LT(1);
            	    match(input,MINUS,FOLLOW_MINUS_in_additiveExpr423); 
            	    MINUS13_tree = (CommonTree)adaptor.create(MINUS13);
            	    root_0 = (CommonTree)adaptor.becomeRoot(MINUS13_tree, root_0);

            	    pushFollow(FOLLOW_multiplicativeExpr_in_additiveExpr432);
            	    e=multiplicativeExpr();
            	    _fsp--;

            	    adaptor.addChild(root_0, e.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end additiveExpr

